# unpack-python-packages

./: .gitignore  LICENSE  README.md  build_wheel.sh  notes.md
sandbox/: pyproject.toml
sandbox/tests/: test_sandbox.py
sandbox_manual_pkg/sandbox_manual_pkg/: __init__.py  __main__.py  hello.py
sandbox_manual_pkg/sandbox_manual_pkg-0.1.0.dist-info/: METADATA  RECORD  WHEEL
