[tool.poetry]
name = "sandbox"
version = "0.1.0"
description = ""
authors = ["Alexander Hultnér <ahultner@gmail.com>"]
packages = [
    { include = "sandbox" },
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
bpython = "^0.21"
ipython = "^7.28.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
